AWS/main.tf
# deploy VPC

resource "aws_vpc" "mtc_vpc" {
  cidr_block = "10.123.0.0/16"
  enable_dns_hostnames=true
  enable_dns_support = true

  tags ={
    Name ="dev"
  }
}
# subnet
resource "aws_subnet" "mtc_public_subnet"{
    vpc_id = aws_vpc.mtc_vpc.id
    cidr_block = "10.123.1.0/24"
    map_public_ip_on_launch = true
    availability_zone = "us-west-2a"

    tags ={
    Name ="dev-public"
  }
}

#internet gateway

resource "aws_internet_gateway" "mtc_internet_gateway"{
    vpc_id = aws_vpc.mtc_vpc.id
    tags ={
    Name ="dev-gateway"
  }
}

# route table
resource "aws_route_table" "mtc_public_rt"{
    vpc_id = aws_vpc.mtc_vpc.id

    tags ={
    Name ="dev-public_rt"
  }
}

resource "aws_router" "default_route"{
    route_table_id = aws_route_table.mtc_public_rt.id
    destination_cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.mtc_internet_gateway.id
}

#route table Association

resource "aws_route_table_association" "mtc_public_assoc" {
  subnet_id      = mtc_public_subnet.mtc_public_subnet.id
  route_table_id = aws_route_table.mtc_public_rt.id
}

# security group
resource "aws_security_group" "mtc_sg" {
  name        = "dev_sg"
  description = "dev security group"
  vpc_id      = aws_vpc.mtc_vpc.id

  ingress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "publlic_security_group"
  }
}

# key pair

resource "aws_key_pair" "mtc_auth"{
    key_name = "id_rsa"
    public_key = file("~/.ssh/id_rsa.pub")
}

# Create Instance

resource "aws_instance" "dev_node"{
    Instance_type = "t2.micro"
    ami = data.aws_ami.server_ami.id
    key_name = aws_key_pair.mtc_auth.id
    vpc_security_group_ids = [aws_security_group.mtc_sg.id]
    subnet_id = aws_subnet.mtc_public_subnet.id
    user_data = filebase64("userdata.tpl")

    root_block_device {
        volume_size = 10
    }

    tags ={
        Name = "dev-node"
    }
}

output "dev_ip" {
  value       = aws_instance.dev_node.public_ip
}
